Findbugs errors, and another (amazing) bug in AliasDescriptors, which apparanetly have never had any qualifier other than Named associated with them!